# pretix-sumup-payment

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  style.yml  tests.yml
pretix_sumup/: apps.py  payment.py  signals.py  sumup_client.py  urls.py  views.py
pretix_sumup/locale/de/LC_MESSAGES/: django.po
pretix_sumup/locale/de_Informal/LC_MESSAGES/: django.po
pretix_sumup/templates/pretix_sumup/: control.html  payment_admin_info.html  payment_widget.html  pending.html  presale.html
