[project]
name = "pretix-sumup-payment"
dynamic = ["version"]
description = "Enables creditcard payments via Sumup"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Christoph Walcher", email = "chris@wiomoc.de"},
]
maintainers = [
    {name = "Christoph Walcher", email = "chris@wiomoc.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_sumup = "pretix_sumup:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/wiomoc/pretix-sumup-payment"
repository = "https://github.com/wiomoc/pretix-sumup-payment"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_sumup.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
